--- a/MenuSystem/Config/DefaultGame.ini
+++ b/MenuSystem/Config/DefaultGame.ini
@@ -7,3 +7,5 @@ CopyrightNotice=
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
+[/Script/Enging.GameSession]
+MaxPlayers=100
