--- a/Blaster/Config/DefaultEngine.ini
+++ b/Blaster/Config/DefaultEngine.ini
@@ -146,3 +146,7 @@ NetServerMaxTickRate=120
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+PackageName=com.KJY.BlasterLecture
+TargetSDKVersion=33
+
