--- a/Blaster/Config/DefaultEngine.ini
+++ b/Blaster/Config/DefaultEngine.ini
@@ -154,3 +154,5 @@ TargetSDKVersion=33
 
 [PacketSimulationSettings]
 Pktlag=0
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Blaster.ElimAnnouncement.PlayAnimation",NewName="/Script/Blaster.ElimAnnouncement.ShowElimText")
